// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CurvedTileEnlargedModel can build a tile with the given size 1`] = `
CurvedTileEnlargedModel {
  "direction": "right",
  "id": "curved-tile-enlarged-1",
  "ratio": 1,
  "specs": TileSpecifications {
    "barrierChunks": 4,
    "barrierWidth": 5,
    "laneWidth": 80,
  },
}
`;

exports[`CurvedTileEnlargedModel can build a tile with the given size and a ratio of 0.5 1`] = `
CurvedTileEnlargedModel {
  "direction": "left",
  "id": "curved-tile-enlarged-1",
  "ratio": 1,
  "specs": TileSpecifications {
    "barrierChunks": 4,
    "barrierWidth": 5,
    "laneWidth": 80,
  },
}
`;

exports[`CurvedTileEnlargedModel can build a tile with the given size and a ratio of 1 1`] = `
CurvedTileEnlargedModel {
  "direction": "left",
  "id": "curved-tile-enlarged-1",
  "ratio": 1,
  "specs": TileSpecifications {
    "barrierChunks": 4,
    "barrierWidth": 5,
    "laneWidth": 80,
  },
}
`;

exports[`CurvedTileEnlargedModel can build a tile with the given size and a ratio of 2 1`] = `
CurvedTileEnlargedModel {
  "direction": "left",
  "id": "curved-tile-enlarged-2",
  "ratio": 2,
  "specs": TileSpecifications {
    "barrierChunks": 4,
    "barrierWidth": 5,
    "laneWidth": 80,
  },
}
`;

exports[`CurvedTileEnlargedModel can build a tile with the given size and a ratio of 3 1`] = `
CurvedTileEnlargedModel {
  "direction": "left",
  "id": "curved-tile-enlarged-3",
  "ratio": 3,
  "specs": TileSpecifications {
    "barrierChunks": 4,
    "barrierWidth": 5,
    "laneWidth": 80,
  },
}
`;

exports[`CurvedTileEnlargedModel can build a tile with the given size and a ratio of 4 1`] = `
CurvedTileEnlargedModel {
  "direction": "left",
  "id": "curved-tile-enlarged-4",
  "ratio": 4,
  "specs": TileSpecifications {
    "barrierChunks": 4,
    "barrierWidth": 5,
    "laneWidth": 80,
  },
}
`;

exports[`CurvedTileEnlargedModel can build a tile with the given size and direction 1`] = `
CurvedTileEnlargedModel {
  "direction": "left",
  "id": "curved-tile-enlarged-1",
  "ratio": 1,
  "specs": TileSpecifications {
    "barrierChunks": 4,
    "barrierWidth": 5,
    "laneWidth": 80,
  },
}
`;

exports[`CurvedTileEnlargedModel can compute the angle of the curve for a tile with a ratio of 0.5 1`] = `90`;

exports[`CurvedTileEnlargedModel can compute the angle of the curve for a tile with a ratio of 1 1`] = `90`;

exports[`CurvedTileEnlargedModel can compute the angle of the curve for a tile with a ratio of 2 1`] = `90`;

exports[`CurvedTileEnlargedModel can compute the angle of the curve for a tile with a ratio of 3 1`] = `90`;

exports[`CurvedTileEnlargedModel can compute the angle of the curve for a tile with a ratio of 4 1`] = `90`;

exports[`CurvedTileEnlargedModel can compute the angle of the output point for a tile oriented to the left with a ratio of 0.5 1`] = `-90`;

exports[`CurvedTileEnlargedModel can compute the angle of the output point for a tile oriented to the left with a ratio of 0.5 2`] = `0`;

exports[`CurvedTileEnlargedModel can compute the angle of the output point for a tile oriented to the left with a ratio of 0.5 3`] = `-90`;

exports[`CurvedTileEnlargedModel can compute the angle of the output point for a tile oriented to the left with a ratio of 0.5 4`] = `0`;

exports[`CurvedTileEnlargedModel can compute the angle of the output point for a tile oriented to the left with a ratio of 1 1`] = `-90`;

exports[`CurvedTileEnlargedModel can compute the angle of the output point for a tile oriented to the left with a ratio of 1 2`] = `0`;

exports[`CurvedTileEnlargedModel can compute the angle of the output point for a tile oriented to the left with a ratio of 1 3`] = `-90`;

exports[`CurvedTileEnlargedModel can compute the angle of the output point for a tile oriented to the left with a ratio of 1 4`] = `0`;

exports[`CurvedTileEnlargedModel can compute the angle of the output point for a tile oriented to the left with a ratio of 2 1`] = `-90`;

exports[`CurvedTileEnlargedModel can compute the angle of the output point for a tile oriented to the left with a ratio of 2 2`] = `0`;

exports[`CurvedTileEnlargedModel can compute the angle of the output point for a tile oriented to the left with a ratio of 2 3`] = `-90`;

exports[`CurvedTileEnlargedModel can compute the angle of the output point for a tile oriented to the left with a ratio of 2 4`] = `0`;

exports[`CurvedTileEnlargedModel can compute the angle of the output point for a tile oriented to the left with a ratio of 3 1`] = `-90`;

exports[`CurvedTileEnlargedModel can compute the angle of the output point for a tile oriented to the left with a ratio of 3 2`] = `0`;

exports[`CurvedTileEnlargedModel can compute the angle of the output point for a tile oriented to the left with a ratio of 3 3`] = `-90`;

exports[`CurvedTileEnlargedModel can compute the angle of the output point for a tile oriented to the left with a ratio of 3 4`] = `0`;

exports[`CurvedTileEnlargedModel can compute the angle of the output point for a tile oriented to the left with a ratio of 4 1`] = `-90`;

exports[`CurvedTileEnlargedModel can compute the angle of the output point for a tile oriented to the left with a ratio of 4 2`] = `0`;

exports[`CurvedTileEnlargedModel can compute the angle of the output point for a tile oriented to the left with a ratio of 4 3`] = `-90`;

exports[`CurvedTileEnlargedModel can compute the angle of the output point for a tile oriented to the left with a ratio of 4 4`] = `0`;

exports[`CurvedTileEnlargedModel can compute the angle of the output point for a tile oriented to the right with a ratio of 0.5 1`] = `90`;

exports[`CurvedTileEnlargedModel can compute the angle of the output point for a tile oriented to the right with a ratio of 0.5 2`] = `180`;

exports[`CurvedTileEnlargedModel can compute the angle of the output point for a tile oriented to the right with a ratio of 0.5 3`] = `90`;

exports[`CurvedTileEnlargedModel can compute the angle of the output point for a tile oriented to the right with a ratio of 0.5 4`] = `180`;

exports[`CurvedTileEnlargedModel can compute the angle of the output point for a tile oriented to the right with a ratio of 1 1`] = `90`;

exports[`CurvedTileEnlargedModel can compute the angle of the output point for a tile oriented to the right with a ratio of 1 2`] = `180`;

exports[`CurvedTileEnlargedModel can compute the angle of the output point for a tile oriented to the right with a ratio of 1 3`] = `90`;

exports[`CurvedTileEnlargedModel can compute the angle of the output point for a tile oriented to the right with a ratio of 1 4`] = `180`;

exports[`CurvedTileEnlargedModel can compute the angle of the output point for a tile oriented to the right with a ratio of 2 1`] = `90`;

exports[`CurvedTileEnlargedModel can compute the angle of the output point for a tile oriented to the right with a ratio of 2 2`] = `180`;

exports[`CurvedTileEnlargedModel can compute the angle of the output point for a tile oriented to the right with a ratio of 2 3`] = `90`;

exports[`CurvedTileEnlargedModel can compute the angle of the output point for a tile oriented to the right with a ratio of 2 4`] = `180`;

exports[`CurvedTileEnlargedModel can compute the angle of the output point for a tile oriented to the right with a ratio of 3 1`] = `90`;

exports[`CurvedTileEnlargedModel can compute the angle of the output point for a tile oriented to the right with a ratio of 3 2`] = `180`;

exports[`CurvedTileEnlargedModel can compute the angle of the output point for a tile oriented to the right with a ratio of 3 3`] = `90`;

exports[`CurvedTileEnlargedModel can compute the angle of the output point for a tile oriented to the right with a ratio of 3 4`] = `180`;

exports[`CurvedTileEnlargedModel can compute the angle of the output point for a tile oriented to the right with a ratio of 4 1`] = `90`;

exports[`CurvedTileEnlargedModel can compute the angle of the output point for a tile oriented to the right with a ratio of 4 2`] = `180`;

exports[`CurvedTileEnlargedModel can compute the angle of the output point for a tile oriented to the right with a ratio of 4 3`] = `90`;

exports[`CurvedTileEnlargedModel can compute the angle of the output point for a tile oriented to the right with a ratio of 4 4`] = `180`;

exports[`CurvedTileEnlargedModel can compute the center of the curve for a tile with a ratio of 0.5 1`] = `
Vector2D {
  "x": -55,
  "y": 0,
}
`;

exports[`CurvedTileEnlargedModel can compute the center of the curve for a tile with a ratio of 0.5 2`] = `
Vector2D {
  "x": 45,
  "y": 100,
}
`;

exports[`CurvedTileEnlargedModel can compute the center of the curve for a tile with a ratio of 1 1`] = `
Vector2D {
  "x": -55,
  "y": 0,
}
`;

exports[`CurvedTileEnlargedModel can compute the center of the curve for a tile with a ratio of 1 2`] = `
Vector2D {
  "x": 45,
  "y": 100,
}
`;

exports[`CurvedTileEnlargedModel can compute the center of the curve for a tile with a ratio of 2 1`] = `
Vector2D {
  "x": -165,
  "y": 0,
}
`;

exports[`CurvedTileEnlargedModel can compute the center of the curve for a tile with a ratio of 2 2`] = `
Vector2D {
  "x": -65,
  "y": 100,
}
`;

exports[`CurvedTileEnlargedModel can compute the center of the curve for a tile with a ratio of 3 1`] = `
Vector2D {
  "x": -275,
  "y": 0,
}
`;

exports[`CurvedTileEnlargedModel can compute the center of the curve for a tile with a ratio of 3 2`] = `
Vector2D {
  "x": -175,
  "y": 100,
}
`;

exports[`CurvedTileEnlargedModel can compute the center of the curve for a tile with a ratio of 4 1`] = `
Vector2D {
  "x": -385,
  "y": 0,
}
`;

exports[`CurvedTileEnlargedModel can compute the center of the curve for a tile with a ratio of 4 2`] = `
Vector2D {
  "x": -285,
  "y": 100,
}
`;

exports[`CurvedTileEnlargedModel can compute the coordinates of the tile oriented to the left with a ratio of 1 and positioned at [100, 100] rotated by 45 degrees 1`] = `
Object {
  "angle": 45,
  "centerCoord": Vector2D {
    "x": 61.10912703473989,
    "y": 138.89087296526012,
  },
  "id": "curved-tile-enlarged-1",
  "model": CurvedTileEnlargedModel {
    "direction": "left",
    "id": "curved-tile-enlarged-1",
    "ratio": 1,
    "specs": TileSpecifications {
      "barrierChunks": 4,
      "barrierWidth": 5,
      "laneWidth": 80,
    },
  },
  "outputAngle": -45,
  "outputCoord": Vector2D {
    "x": 100,
    "y": 177.78174593052023,
  },
  "x": 100,
  "y": 100,
}
`;

exports[`CurvedTileEnlargedModel can compute the coordinates of the tile oriented to the left with a ratio of 1 and positioned at [undefined, undefined] rotated by undefined degrees 1`] = `
Object {
  "angle": 0,
  "centerCoord": Vector2D {
    "x": 0,
    "y": 55,
  },
  "id": "curved-tile-enlarged-1",
  "model": CurvedTileEnlargedModel {
    "direction": "left",
    "id": "curved-tile-enlarged-1",
    "ratio": 1,
    "specs": TileSpecifications {
      "barrierChunks": 4,
      "barrierWidth": 5,
      "laneWidth": 80,
    },
  },
  "outputAngle": -90,
  "outputCoord": Vector2D {
    "x": 55,
    "y": 55,
  },
  "x": 0,
  "y": 0,
}
`;

exports[`CurvedTileEnlargedModel can compute the coordinates of the tile oriented to the left with a ratio of 2 and positioned at [100, 100] rotated by 45 degrees 1`] = `
Object {
  "angle": 45,
  "centerCoord": Vector2D {
    "x": -16.67261889578033,
    "y": 216.67261889578035,
  },
  "id": "curved-tile-enlarged-2",
  "model": CurvedTileEnlargedModel {
    "direction": "left",
    "id": "curved-tile-enlarged-2",
    "ratio": 2,
    "specs": TileSpecifications {
      "barrierChunks": 4,
      "barrierWidth": 5,
      "laneWidth": 80,
    },
  },
  "outputAngle": -45,
  "outputCoord": Vector2D {
    "x": 100.00000000000001,
    "y": 333.3452377915607,
  },
  "x": 100,
  "y": 100,
}
`;

exports[`CurvedTileEnlargedModel can compute the coordinates of the tile oriented to the right with a ratio of 1 and positioned at [100, 100] rotated by 45 degrees 1`] = `
Object {
  "angle": 45,
  "centerCoord": Vector2D {
    "x": 61.10912703473989,
    "y": 138.89087296526012,
  },
  "id": "curved-tile-enlarged-1",
  "model": CurvedTileEnlargedModel {
    "direction": "right",
    "id": "curved-tile-enlarged-1",
    "ratio": 1,
    "specs": TileSpecifications {
      "barrierChunks": 4,
      "barrierWidth": 5,
      "laneWidth": 80,
    },
  },
  "outputAngle": 135,
  "outputCoord": Vector2D {
    "x": 22.21825406947977,
    "y": 100,
  },
  "x": 100,
  "y": 100,
}
`;

exports[`CurvedTileEnlargedModel can compute the coordinates of the tile oriented to the right with a ratio of 1 and positioned at [undefined, undefined] rotated by undefined degrees 1`] = `
Object {
  "angle": 0,
  "centerCoord": Vector2D {
    "x": 0,
    "y": 55,
  },
  "id": "curved-tile-enlarged-1",
  "model": CurvedTileEnlargedModel {
    "direction": "right",
    "id": "curved-tile-enlarged-1",
    "ratio": 1,
    "specs": TileSpecifications {
      "barrierChunks": 4,
      "barrierWidth": 5,
      "laneWidth": 80,
    },
  },
  "outputAngle": 90,
  "outputCoord": Vector2D {
    "x": -55,
    "y": 55,
  },
  "x": 0,
  "y": 0,
}
`;

exports[`CurvedTileEnlargedModel can compute the coordinates of the tile oriented to the right with a ratio of 2 and positioned at [100, 100] rotated by 45 degrees 1`] = `
Object {
  "angle": 45,
  "centerCoord": Vector2D {
    "x": -16.67261889578033,
    "y": 216.67261889578035,
  },
  "id": "curved-tile-enlarged-2",
  "model": CurvedTileEnlargedModel {
    "direction": "right",
    "id": "curved-tile-enlarged-2",
    "ratio": 2,
    "specs": TileSpecifications {
      "barrierChunks": 4,
      "barrierWidth": 5,
      "laneWidth": 80,
    },
  },
  "outputAngle": 135,
  "outputCoord": Vector2D {
    "x": -133.3452377915607,
    "y": 100.00000000000001,
  },
  "x": 100,
  "y": 100,
}
`;

exports[`CurvedTileEnlargedModel can compute the inner radius of the curve for a tile with a ratio of 0.5 1`] = `10`;

exports[`CurvedTileEnlargedModel can compute the inner radius of the curve for a tile with a ratio of 1 1`] = `10`;

exports[`CurvedTileEnlargedModel can compute the inner radius of the curve for a tile with a ratio of 2 1`] = `120`;

exports[`CurvedTileEnlargedModel can compute the inner radius of the curve for a tile with a ratio of 3 1`] = `230`;

exports[`CurvedTileEnlargedModel can compute the inner radius of the curve for a tile with a ratio of 4 1`] = `340`;

exports[`CurvedTileEnlargedModel can compute the number of chunks by side for a tile with a ratio of 0.5 1`] = `2`;

exports[`CurvedTileEnlargedModel can compute the number of chunks by side for a tile with a ratio of 1 1`] = `2`;

exports[`CurvedTileEnlargedModel can compute the number of chunks by side for a tile with a ratio of 2 1`] = `4`;

exports[`CurvedTileEnlargedModel can compute the number of chunks by side for a tile with a ratio of 3 1`] = `6`;

exports[`CurvedTileEnlargedModel can compute the number of chunks by side for a tile with a ratio of 4 1`] = `8`;

exports[`CurvedTileEnlargedModel can compute the number of chunks for the inner curve for a tile with a ratio of 0.5 1`] = `2`;

exports[`CurvedTileEnlargedModel can compute the number of chunks for the inner curve for a tile with a ratio of 1 1`] = `2`;

exports[`CurvedTileEnlargedModel can compute the number of chunks for the inner curve for a tile with a ratio of 2 1`] = `8`;

exports[`CurvedTileEnlargedModel can compute the number of chunks for the inner curve for a tile with a ratio of 3 1`] = `12`;

exports[`CurvedTileEnlargedModel can compute the number of chunks for the inner curve for a tile with a ratio of 4 1`] = `16`;

exports[`CurvedTileEnlargedModel can compute the number of chunks for the outer curve for a tile with a ratio of 0.5 1`] = `2`;

exports[`CurvedTileEnlargedModel can compute the number of chunks for the outer curve for a tile with a ratio of 1 1`] = `2`;

exports[`CurvedTileEnlargedModel can compute the number of chunks for the outer curve for a tile with a ratio of 2 1`] = `4`;

exports[`CurvedTileEnlargedModel can compute the number of chunks for the outer curve for a tile with a ratio of 3 1`] = `6`;

exports[`CurvedTileEnlargedModel can compute the number of chunks for the outer curve for a tile with a ratio of 4 1`] = `8`;

exports[`CurvedTileEnlargedModel can compute the outer radius of the curve for a tile with a ratio of 0.5 1`] = `45`;

exports[`CurvedTileEnlargedModel can compute the outer radius of the curve for a tile with a ratio of 1 1`] = `45`;

exports[`CurvedTileEnlargedModel can compute the outer radius of the curve for a tile with a ratio of 2 1`] = `100`;

exports[`CurvedTileEnlargedModel can compute the outer radius of the curve for a tile with a ratio of 3 1`] = `155`;

exports[`CurvedTileEnlargedModel can compute the outer radius of the curve for a tile with a ratio of 4 1`] = `210`;

exports[`CurvedTileEnlargedModel can compute the position of the center point for a tile with a ratio of 0.5 1`] = `
Vector2D {
  "x": 0,
  "y": 55,
}
`;

exports[`CurvedTileEnlargedModel can compute the position of the center point for a tile with a ratio of 0.5 2`] = `
Vector2D {
  "x": 100,
  "y": 155,
}
`;

exports[`CurvedTileEnlargedModel can compute the position of the center point for a tile with a ratio of 0.5 3`] = `
Vector2D {
  "x": 45,
  "y": 100,
}
`;

exports[`CurvedTileEnlargedModel can compute the position of the center point for a tile with a ratio of 1 1`] = `
Vector2D {
  "x": 0,
  "y": 55,
}
`;

exports[`CurvedTileEnlargedModel can compute the position of the center point for a tile with a ratio of 1 2`] = `
Vector2D {
  "x": 100,
  "y": 155,
}
`;

exports[`CurvedTileEnlargedModel can compute the position of the center point for a tile with a ratio of 1 3`] = `
Vector2D {
  "x": 45,
  "y": 100,
}
`;

exports[`CurvedTileEnlargedModel can compute the position of the center point for a tile with a ratio of 2 1`] = `
Vector2D {
  "x": 0,
  "y": 165,
}
`;

exports[`CurvedTileEnlargedModel can compute the position of the center point for a tile with a ratio of 2 2`] = `
Vector2D {
  "x": 100,
  "y": 265,
}
`;

exports[`CurvedTileEnlargedModel can compute the position of the center point for a tile with a ratio of 2 3`] = `
Vector2D {
  "x": -65,
  "y": 100.00000000000001,
}
`;

exports[`CurvedTileEnlargedModel can compute the position of the center point for a tile with a ratio of 3 1`] = `
Vector2D {
  "x": 0,
  "y": 275,
}
`;

exports[`CurvedTileEnlargedModel can compute the position of the center point for a tile with a ratio of 3 2`] = `
Vector2D {
  "x": 100,
  "y": 375,
}
`;

exports[`CurvedTileEnlargedModel can compute the position of the center point for a tile with a ratio of 3 3`] = `
Vector2D {
  "x": -175,
  "y": 100.00000000000001,
}
`;

exports[`CurvedTileEnlargedModel can compute the position of the center point for a tile with a ratio of 4 1`] = `
Vector2D {
  "x": 0,
  "y": 385,
}
`;

exports[`CurvedTileEnlargedModel can compute the position of the center point for a tile with a ratio of 4 2`] = `
Vector2D {
  "x": 100,
  "y": 485,
}
`;

exports[`CurvedTileEnlargedModel can compute the position of the center point for a tile with a ratio of 4 3`] = `
Vector2D {
  "x": -285,
  "y": 100.00000000000003,
}
`;

exports[`CurvedTileEnlargedModel can compute the position of the output point for a tile oriented to the left with a ratio of 0.5 1`] = `
Vector2D {
  "x": 55,
  "y": 55,
}
`;

exports[`CurvedTileEnlargedModel can compute the position of the output point for a tile oriented to the left with a ratio of 0.5 2`] = `
Vector2D {
  "x": 155,
  "y": 155,
}
`;

exports[`CurvedTileEnlargedModel can compute the position of the output point for a tile oriented to the left with a ratio of 0.5 3`] = `
Vector2D {
  "x": 45,
  "y": 155,
}
`;

exports[`CurvedTileEnlargedModel can compute the position of the output point for a tile oriented to the left with a ratio of 0.5 4`] = `
Vector2D {
  "x": 55,
  "y": 55,
}
`;

exports[`CurvedTileEnlargedModel can compute the position of the output point for a tile oriented to the left with a ratio of 0.5 5`] = `
Vector2D {
  "x": 155,
  "y": 155,
}
`;

exports[`CurvedTileEnlargedModel can compute the position of the output point for a tile oriented to the left with a ratio of 0.5 6`] = `
Vector2D {
  "x": 45,
  "y": 155,
}
`;

exports[`CurvedTileEnlargedModel can compute the position of the output point for a tile oriented to the left with a ratio of 1 1`] = `
Vector2D {
  "x": 55,
  "y": 55,
}
`;

exports[`CurvedTileEnlargedModel can compute the position of the output point for a tile oriented to the left with a ratio of 1 2`] = `
Vector2D {
  "x": 155,
  "y": 155,
}
`;

exports[`CurvedTileEnlargedModel can compute the position of the output point for a tile oriented to the left with a ratio of 1 3`] = `
Vector2D {
  "x": 45,
  "y": 155,
}
`;

exports[`CurvedTileEnlargedModel can compute the position of the output point for a tile oriented to the left with a ratio of 1 4`] = `
Vector2D {
  "x": 55,
  "y": 55,
}
`;

exports[`CurvedTileEnlargedModel can compute the position of the output point for a tile oriented to the left with a ratio of 1 5`] = `
Vector2D {
  "x": 155,
  "y": 155,
}
`;

exports[`CurvedTileEnlargedModel can compute the position of the output point for a tile oriented to the left with a ratio of 1 6`] = `
Vector2D {
  "x": 45,
  "y": 155,
}
`;

exports[`CurvedTileEnlargedModel can compute the position of the output point for a tile oriented to the left with a ratio of 2 1`] = `
Vector2D {
  "x": 165,
  "y": 165,
}
`;

exports[`CurvedTileEnlargedModel can compute the position of the output point for a tile oriented to the left with a ratio of 2 2`] = `
Vector2D {
  "x": 265,
  "y": 265,
}
`;

exports[`CurvedTileEnlargedModel can compute the position of the output point for a tile oriented to the left with a ratio of 2 3`] = `
Vector2D {
  "x": -65,
  "y": 265,
}
`;

exports[`CurvedTileEnlargedModel can compute the position of the output point for a tile oriented to the left with a ratio of 2 4`] = `
Vector2D {
  "x": 165,
  "y": 165,
}
`;

exports[`CurvedTileEnlargedModel can compute the position of the output point for a tile oriented to the left with a ratio of 2 5`] = `
Vector2D {
  "x": 265,
  "y": 265,
}
`;

exports[`CurvedTileEnlargedModel can compute the position of the output point for a tile oriented to the left with a ratio of 2 6`] = `
Vector2D {
  "x": -65,
  "y": 265,
}
`;

exports[`CurvedTileEnlargedModel can compute the position of the output point for a tile oriented to the left with a ratio of 3 1`] = `
Vector2D {
  "x": 275,
  "y": 275,
}
`;

exports[`CurvedTileEnlargedModel can compute the position of the output point for a tile oriented to the left with a ratio of 3 2`] = `
Vector2D {
  "x": 375,
  "y": 375,
}
`;

exports[`CurvedTileEnlargedModel can compute the position of the output point for a tile oriented to the left with a ratio of 3 3`] = `
Vector2D {
  "x": -175,
  "y": 375,
}
`;

exports[`CurvedTileEnlargedModel can compute the position of the output point for a tile oriented to the left with a ratio of 3 4`] = `
Vector2D {
  "x": 275,
  "y": 275,
}
`;

exports[`CurvedTileEnlargedModel can compute the position of the output point for a tile oriented to the left with a ratio of 3 5`] = `
Vector2D {
  "x": 375,
  "y": 375,
}
`;

exports[`CurvedTileEnlargedModel can compute the position of the output point for a tile oriented to the left with a ratio of 3 6`] = `
Vector2D {
  "x": -175,
  "y": 375,
}
`;

exports[`CurvedTileEnlargedModel can compute the position of the output point for a tile oriented to the left with a ratio of 4 1`] = `
Vector2D {
  "x": 385,
  "y": 385,
}
`;

exports[`CurvedTileEnlargedModel can compute the position of the output point for a tile oriented to the left with a ratio of 4 2`] = `
Vector2D {
  "x": 485,
  "y": 485,
}
`;

exports[`CurvedTileEnlargedModel can compute the position of the output point for a tile oriented to the left with a ratio of 4 3`] = `
Vector2D {
  "x": -285,
  "y": 485,
}
`;

exports[`CurvedTileEnlargedModel can compute the position of the output point for a tile oriented to the left with a ratio of 4 4`] = `
Vector2D {
  "x": 385,
  "y": 385,
}
`;

exports[`CurvedTileEnlargedModel can compute the position of the output point for a tile oriented to the left with a ratio of 4 5`] = `
Vector2D {
  "x": 485,
  "y": 485,
}
`;

exports[`CurvedTileEnlargedModel can compute the position of the output point for a tile oriented to the left with a ratio of 4 6`] = `
Vector2D {
  "x": -285,
  "y": 485,
}
`;

exports[`CurvedTileEnlargedModel can compute the position of the output point for a tile oriented to the right with a ratio of 0.5 1`] = `
Vector2D {
  "x": -55,
  "y": 55,
}
`;

exports[`CurvedTileEnlargedModel can compute the position of the output point for a tile oriented to the right with a ratio of 0.5 2`] = `
Vector2D {
  "x": 45,
  "y": 155,
}
`;

exports[`CurvedTileEnlargedModel can compute the position of the output point for a tile oriented to the right with a ratio of 0.5 3`] = `
Vector2D {
  "x": 45,
  "y": 45,
}
`;

exports[`CurvedTileEnlargedModel can compute the position of the output point for a tile oriented to the right with a ratio of 0.5 4`] = `
Vector2D {
  "x": -55,
  "y": 55,
}
`;

exports[`CurvedTileEnlargedModel can compute the position of the output point for a tile oriented to the right with a ratio of 0.5 5`] = `
Vector2D {
  "x": 45,
  "y": 155,
}
`;

exports[`CurvedTileEnlargedModel can compute the position of the output point for a tile oriented to the right with a ratio of 0.5 6`] = `
Vector2D {
  "x": 45,
  "y": 45,
}
`;

exports[`CurvedTileEnlargedModel can compute the position of the output point for a tile oriented to the right with a ratio of 1 1`] = `
Vector2D {
  "x": -55,
  "y": 55,
}
`;

exports[`CurvedTileEnlargedModel can compute the position of the output point for a tile oriented to the right with a ratio of 1 2`] = `
Vector2D {
  "x": 45,
  "y": 155,
}
`;

exports[`CurvedTileEnlargedModel can compute the position of the output point for a tile oriented to the right with a ratio of 1 3`] = `
Vector2D {
  "x": 45,
  "y": 45,
}
`;

exports[`CurvedTileEnlargedModel can compute the position of the output point for a tile oriented to the right with a ratio of 1 4`] = `
Vector2D {
  "x": -55,
  "y": 55,
}
`;

exports[`CurvedTileEnlargedModel can compute the position of the output point for a tile oriented to the right with a ratio of 1 5`] = `
Vector2D {
  "x": 45,
  "y": 155,
}
`;

exports[`CurvedTileEnlargedModel can compute the position of the output point for a tile oriented to the right with a ratio of 1 6`] = `
Vector2D {
  "x": 45,
  "y": 45,
}
`;

exports[`CurvedTileEnlargedModel can compute the position of the output point for a tile oriented to the right with a ratio of 2 1`] = `
Vector2D {
  "x": -165,
  "y": 165,
}
`;

exports[`CurvedTileEnlargedModel can compute the position of the output point for a tile oriented to the right with a ratio of 2 2`] = `
Vector2D {
  "x": -65,
  "y": 265,
}
`;

exports[`CurvedTileEnlargedModel can compute the position of the output point for a tile oriented to the right with a ratio of 2 3`] = `
Vector2D {
  "x": -65,
  "y": -65,
}
`;

exports[`CurvedTileEnlargedModel can compute the position of the output point for a tile oriented to the right with a ratio of 2 4`] = `
Vector2D {
  "x": -165,
  "y": 165,
}
`;

exports[`CurvedTileEnlargedModel can compute the position of the output point for a tile oriented to the right with a ratio of 2 5`] = `
Vector2D {
  "x": -65,
  "y": 265,
}
`;

exports[`CurvedTileEnlargedModel can compute the position of the output point for a tile oriented to the right with a ratio of 2 6`] = `
Vector2D {
  "x": -65,
  "y": -65,
}
`;

exports[`CurvedTileEnlargedModel can compute the position of the output point for a tile oriented to the right with a ratio of 3 1`] = `
Vector2D {
  "x": -275,
  "y": 275,
}
`;

exports[`CurvedTileEnlargedModel can compute the position of the output point for a tile oriented to the right with a ratio of 3 2`] = `
Vector2D {
  "x": -175,
  "y": 375,
}
`;

exports[`CurvedTileEnlargedModel can compute the position of the output point for a tile oriented to the right with a ratio of 3 3`] = `
Vector2D {
  "x": -175,
  "y": -175,
}
`;

exports[`CurvedTileEnlargedModel can compute the position of the output point for a tile oriented to the right with a ratio of 3 4`] = `
Vector2D {
  "x": -275,
  "y": 275,
}
`;

exports[`CurvedTileEnlargedModel can compute the position of the output point for a tile oriented to the right with a ratio of 3 5`] = `
Vector2D {
  "x": -175,
  "y": 375,
}
`;

exports[`CurvedTileEnlargedModel can compute the position of the output point for a tile oriented to the right with a ratio of 3 6`] = `
Vector2D {
  "x": -175,
  "y": -175,
}
`;

exports[`CurvedTileEnlargedModel can compute the position of the output point for a tile oriented to the right with a ratio of 4 1`] = `
Vector2D {
  "x": -385,
  "y": 385,
}
`;

exports[`CurvedTileEnlargedModel can compute the position of the output point for a tile oriented to the right with a ratio of 4 2`] = `
Vector2D {
  "x": -285,
  "y": 485,
}
`;

exports[`CurvedTileEnlargedModel can compute the position of the output point for a tile oriented to the right with a ratio of 4 3`] = `
Vector2D {
  "x": -285,
  "y": -285,
}
`;

exports[`CurvedTileEnlargedModel can compute the position of the output point for a tile oriented to the right with a ratio of 4 4`] = `
Vector2D {
  "x": -385,
  "y": 385,
}
`;

exports[`CurvedTileEnlargedModel can compute the position of the output point for a tile oriented to the right with a ratio of 4 5`] = `
Vector2D {
  "x": -285,
  "y": 485,
}
`;

exports[`CurvedTileEnlargedModel can compute the position of the output point for a tile oriented to the right with a ratio of 4 6`] = `
Vector2D {
  "x": -285,
  "y": -285,
}
`;

exports[`CurvedTileEnlargedModel can compute the rotation angle for a tile oriented to the left with a ratio of 0.5 1`] = `90`;

exports[`CurvedTileEnlargedModel can compute the rotation angle for a tile oriented to the left with a ratio of 0.5 2`] = `90`;

exports[`CurvedTileEnlargedModel can compute the rotation angle for a tile oriented to the left with a ratio of 1 1`] = `90`;

exports[`CurvedTileEnlargedModel can compute the rotation angle for a tile oriented to the left with a ratio of 1 2`] = `90`;

exports[`CurvedTileEnlargedModel can compute the rotation angle for a tile oriented to the left with a ratio of 2 1`] = `90`;

exports[`CurvedTileEnlargedModel can compute the rotation angle for a tile oriented to the left with a ratio of 2 2`] = `90`;

exports[`CurvedTileEnlargedModel can compute the rotation angle for a tile oriented to the left with a ratio of 3 1`] = `90`;

exports[`CurvedTileEnlargedModel can compute the rotation angle for a tile oriented to the left with a ratio of 3 2`] = `90`;

exports[`CurvedTileEnlargedModel can compute the rotation angle for a tile oriented to the left with a ratio of 4 1`] = `90`;

exports[`CurvedTileEnlargedModel can compute the rotation angle for a tile oriented to the left with a ratio of 4 2`] = `90`;

exports[`CurvedTileEnlargedModel can compute the rotation angle for a tile oriented to the right with a ratio of 0.5 1`] = `0`;

exports[`CurvedTileEnlargedModel can compute the rotation angle for a tile oriented to the right with a ratio of 0.5 2`] = `0`;

exports[`CurvedTileEnlargedModel can compute the rotation angle for a tile oriented to the right with a ratio of 1 1`] = `0`;

exports[`CurvedTileEnlargedModel can compute the rotation angle for a tile oriented to the right with a ratio of 1 2`] = `0`;

exports[`CurvedTileEnlargedModel can compute the rotation angle for a tile oriented to the right with a ratio of 2 1`] = `0`;

exports[`CurvedTileEnlargedModel can compute the rotation angle for a tile oriented to the right with a ratio of 2 2`] = `0`;

exports[`CurvedTileEnlargedModel can compute the rotation angle for a tile oriented to the right with a ratio of 3 1`] = `0`;

exports[`CurvedTileEnlargedModel can compute the rotation angle for a tile oriented to the right with a ratio of 3 2`] = `0`;

exports[`CurvedTileEnlargedModel can compute the rotation angle for a tile oriented to the right with a ratio of 4 1`] = `0`;

exports[`CurvedTileEnlargedModel can compute the rotation angle for a tile oriented to the right with a ratio of 4 2`] = `0`;

exports[`CurvedTileEnlargedModel can compute the side of the curve for a tile with a ratio of 0.5 1`] = `55`;

exports[`CurvedTileEnlargedModel can compute the side of the curve for a tile with a ratio of 1 1`] = `55`;

exports[`CurvedTileEnlargedModel can compute the side of the curve for a tile with a ratio of 2 1`] = `110`;

exports[`CurvedTileEnlargedModel can compute the side of the curve for a tile with a ratio of 3 1`] = `165`;

exports[`CurvedTileEnlargedModel can compute the side of the curve for a tile with a ratio of 4 1`] = `220`;

exports[`CurvedTileEnlargedModel can export to an object a tile oriented to the left having a ratio of 1 1`] = `
Object {
  "direction": "left",
  "ratio": 1,
  "type": "curved-tile-enlarged",
}
`;

exports[`CurvedTileEnlargedModel can export to an object a tile oriented to the left having a ratio of 2 1`] = `
Object {
  "direction": "left",
  "ratio": 2,
  "type": "curved-tile-enlarged",
}
`;

exports[`CurvedTileEnlargedModel can export to an object a tile oriented to the right having a ratio of 1 1`] = `
Object {
  "direction": "right",
  "ratio": 1,
  "type": "curved-tile-enlarged",
}
`;

exports[`CurvedTileEnlargedModel can export to an object a tile oriented to the right having a ratio of 2 1`] = `
Object {
  "direction": "right",
  "ratio": 2,
  "type": "curved-tile-enlarged",
}
`;
